<resources>
    <string name="app_name">List1.0</string>
    <string name="action_settings">Settings</string>
    <string name="activity">活动</string>
    <string name="login">登陆</string>
    <string name="sign">注册</string>
    <string name="search">搜索...</string>
    <string name="adtext">清单</string>
    <string name="adtext1">设定目标</string>
    <string name="adtext2">随时随地使用</string>

    <string name="addtask">添加任务...</string>
    <string name="finish">已完成任务</string>
    <string name="addlist">添加清单</string>
    <string name="listhint">请输入清单名</string>

    <string name="welcome">欢迎使用清单</string>
    <string name="welcomesign">欢迎注册清单</string>
    <string name="uesname">请输入账号</string>
    <string name="uespassword">请输入密码</string>

    <string name="testname">我的清单</string>
    <string name="listname">测试清单</string>
    <string name="email">测试邮箱@163.com</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="drawer_menu">
        <item>账户详情</item>
        <item>通知</item>
        <item>登出</item>
    </string-array>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="addgoal">请输入您的目标名</string>

    <string name="drawname">账户</string>
    <string name="userdetial">账户详情</string>
    <string name="loginout">登出</string>
    <string name="finished">任务完成情况：</string>
    <string name="isfinish">已完成</string>
    <string name="isnotfinish">未完成</string>
    <string name="ps">添加备注...</string>
    <string name="delete">删除</string>

    <string name="info_face">查看头像</string>
    <string name="info_name">修改名字</string>
    <string name="transition_dialog">transition_dialog</string>
    <string name="finishdate">完成日期</string>
    <string name="finishtime">完成时间</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
</resources>
