<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/setdetial_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:background="#00ffffff"
                android:layout_centerVertical="true"
                android:onClick="setdetial"
                android:src="@drawable/backbutton"/>
            <TextView
                android:id="@+id/set_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testname"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/setdetial_back"
                android:layout_marginLeft="8dp"
                android:textSize="16dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_menu_camera"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:text="@string/testname"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/finished"/>
        <Switch
            android:id="@+id/choosefinish"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:switchPadding="8dp"
            android:textOff="@string/isnotfinish"
            android:textOn="@string/isfinish"
            android:layout_marginLeft="72dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/ps"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp"
        android:minHeight="200dp"
        android:hint="@string/ps"
        android:gravity="start"/>
    <Button
        android:id="@+id/sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/sure"/>
</LinearLayout>
