<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogActivity"
    android:id="@+id/dialog">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dialog_margin"
        android:layout_marginStart="@dimen/dialog_margin"
        android:background="@drawable/dialog_background"
        android:transitionName="@string/transition_dialog"
        android:elevation="@dimen/dialog_elevation"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/addlist"
            android:textAppearance="?android:textAppearanceLarge"/>

        <EditText
            android:id="@+id/addlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/listhint"
            android:textAppearance="?android:textAppearanceMedium"/>

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@drawable/btn_background"
            android:layout_marginTop="24dp"
            android:text="@string/sure"
            android:textColor="#fff"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:text="清单名不能为空"
            android:textColor="#f00"
            android:visibility="gone"
            />

    </LinearLayout>

</FrameLayout>
