<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="cn.edu.zucc.list.LoginActivity">

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:background="@drawable/shape_background"
        >
        <ViewFlipper
            android:id="@+id/ViewFlippers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="150dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/list"
                    android:id="@+id/imageview" />
                <TextView
                    android:id="@+id/adv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview"
                    android:text="@string/adtext"
                    android:textSize="20dp"
                    android:layout_marginTop="18dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:scaleType="centerInside"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/adv"
                    android:adjustViewBounds="true"
                    android:src="@drawable/point1"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageview2"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/setgoals" />
                <TextView
                    android:id="@+id/adv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview2"
                    android:text="@string/adtext1"
                    android:layout_marginTop="18dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:scaleType="centerInside"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/adv2"
                    android:adjustViewBounds="true"
                    android:src="@drawable/point_2"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageview3"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/everytime" />
                <TextView
                    android:id="@+id/adv3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview3"
                    android:layout_marginTop="18dp"
                    android:text="@string/adtext2"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:scaleType="centerInside"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/adv3"
                    android:adjustViewBounds="true"
                    android:src="@drawable/point_3"/>
            </RelativeLayout>
        </ViewFlipper>
        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="78dp"
            android:layout_above="@+id/sign"
            android:text="@string/login"
            android:textColor="#fff"
            android:background="@drawable/shape_blue"
            android:onClick="loginview"
            android:layout_alignParentBottom="true"/>
        <Button
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sign"
            android:background="@drawable/shape_white"
            android:onClick="signview"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_toRightOf="@+id/login"
        android:id="@+id/ueslogin"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/shape_background">
        <ImageButton
            android:id="@+id/loginback"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:background="#00ffffff"
            android:onClick="loginback"
            android:src="@drawable/backbutton1"/>
        <TextView
            android:id="@+id/welcome"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="16dp"
            android:layout_below="@+id/welcome"
            android:textSize="16dp"
            android:hint="@string/uesname"
            android:background="@drawable/bg_edittext"/>
        <EditText
            android:id="@+id/userpassword"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16dp"
            android:layout_below="@+id/username"
            android:paddingLeft="16dp"
            android:hint="@string/uespassword"
            android:inputType="textPassword"
            android:background="@drawable/bg_edittext"/>
        <Button
            android:id="@+id/login_inlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:background="@drawable/shape_blue"
            android:onClick="login"
            android:layout_below="@+id/userpassword"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_toLeftOf="@+id/login"
        android:id="@+id/uessign"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/shape_background">
        <ImageButton
            android:id="@+id/signback"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:background="#00ffffff"
            android:onClick="signback"
            android:src="@drawable/backbutton1"/>
        <TextView
            android:id="@+id/welcomesign"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomesign"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/signname"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/welcomesign"
            android:textSize="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/uesname"
            android:background="@drawable/bg_edittext"/>
        <EditText
            android:id="@+id/signpassword"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16dp"
            android:paddingLeft="16dp"
            android:inputType="textPassword"
            android:layout_below="@+id/signname"
            android:singleLine="true"
            android:hint="@string/uespassword"
            android:background="@drawable/bg_edittext"/>
        <Button
            android:id="@+id/sign_insign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/sign"
            android:textColor="#fff"
            android:background="@drawable/shape_blue"
            android:onClick="sign"
            android:layout_below="@+id/signpassword"/>
    </RelativeLayout>
</RelativeLayout>
