<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    tools:context="cn.edu.zucc.list.Fragment.ListdetilFragment">

    <ScrollView
        android:id="@+id/activity_listdetil_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_below="@+id/toolbar">
            <EditText
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/addtask"
                android:textSize="16sp"
                android:textColorHint="#fff"
                android:background="@drawable/shape_task"
                android:layout_marginTop="8dp"
                android:padding="8dp" />

            <TextView
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list_task"
                android:text="@string/finish"
                android:textColor="#fff"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"/>
            <ListView
                android:id="@+id/list_task_finish"
                android:background="@drawable/shape_white"
                android:layout_below="@+id/finish"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

            <ListView
                android:id="@+id/list_task"
                android:background="@drawable/shape_white"
                android:layout_marginTop="21dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/task"
                android:layout_alignParentStart="true">
            </ListView>
        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/detialback"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="0dp"
                android:background="#00ffffff"
                android:layout_centerVertical="true"
                android:onClick="detialback"
                android:src="@drawable/backbutton"/>

            <TextView
                android:id="@+id/detial_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testname"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"
                android:textColor="#fafafa"
                android:layout_alignTop="@+id/detialback"
                android:layout_toEndOf="@+id/detialback" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
</RelativeLayout>
